[package]
name = "tic_tac_toe_rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
iced = "0.10.0"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.189"
